<resources>
    <string name="app_name">BSR</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="go">GO</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="logo">Logo</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="bills">Bills</string>
    <string name="note">Note</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="calendar">Calendar</string>
    <string name="chart">chart</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="add_button">ADD_BUTTON</string>
    <string name="subscription">Subscription</string>
    <string name="sing_out">SING_OUT</string>
    <string name="log_out">Log Out</string>
    <string name="my_bills">My Bills</string>
    <string name="description">Description</string>
    <string name="always_one_step_ahead">Always one step ahead!</string>
    <string name="bs_reminder">BS Reminder</string>
    <string name="new_user_signup">New User? SignUp</string>
    <string name="welcome">Welcome</string>
    <string name="sing_up_to_start_your_journey">Sing Up to start your journey!</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo_logo">LOGO_LOGO</string>
    <string name="arrow">ARROW</string>
    <string name="plus_btn">PLUS_BTN</string>
    <string name="back_arrow">BACK_ARROW</string>
    <string name="btn_add">BTN_ADD</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="img_pay">IMG_PAY</string>
    <string name="bill_title">Bill Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="your_bill">Your Bill</string>
    <string name="notify_title">Notify Title</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="provider">Provider</string>

</resources>