<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp">
                
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/image_bills"
                    android:src="@drawable/ic_payments"
                    android:contentDescription="@string/img_pay" />

                <TextView
                    android:id="@+id/billableDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provider"
                    android:paddingTop="10dp"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/image_bills"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/billableAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_toEndOf="@id/image_bills"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"/>

                <TextView
                    android:id="@+id/billableDate"
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:layout_toEndOf="@id/image_bills"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="70dp"/>

</RelativeLayout>

</androidx.cardview.widget.CardView>