<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cut_card_background"
    tools:context=".Subscriptions">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/ic_arrow_back_"
        android:contentDescription="@string/back_arrow" />

    <TextView
        android:id="@+id/text_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/image_back"
        android:fontFamily="@font/antic"
        android:padding="5dp"
        android:text="@string/my_subscriptions"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSubscriptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_back"
        android:nestedScrollingEnabled="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:src="@drawable/ic_file_add"
        android:backgroundTint="#ffffff"
        android:contentDescription="@string/btn_add" />

</RelativeLayout>